🔥 Grok Engine: Soft-ero content generation
Features:
- xAI Grok entegrasyonu (OpenAI SDK uyumlu)
- 3 yeni vibe mode: midnight_whisper, silk_tease, velvet_fire
- POST /v1/ai/soft_ero endpoint
- GET /v1/ai/grok/status endpoint
- Intensity seviyeleri: soft, medium, spicy
- Senaryo bazlı içerik: gece, selfie, yatak, banyo, flört

Grok, OpenAI'dan daha esnek content policy ile 18+ tasteful içerik üretir.
Vulgar/explicit içerik üretmez, soft-ero sınırlarında kalır.

--- a/auroraos/backend/.env.example
+++ b/auroraos/backend/.env.example
@@ -14,3 +14,7 @@ OPENAI_API_KEY=sk-your-openai-api-key-here
 # API Configuration
 API_V1_PREFIX=/v1
 PROJECT_NAME=AuroraOS
+
+# xAI Grok API (Soft-Ero Content)
+# Get your API key from: https://console.x.ai
+XAI_API_KEY=xai-your-grok-api-key-here
